@@ -1,3 +1,8 @@
+2005-03-09  Lars Clausen  <lars@raeder.dk>
+
+	* lib/Makefile.am (dia-lib-icons.h): 
+	* app/Makefile.am: Minor cleanup.
+
 2005-03-06  Hans Breuer  <hans@breuer.org>
 
 	* app/app_procs.c : avoid "assignment within conditional expression"
